k8s/backend-dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
        - name: dotnet
          image: ts-backend-dotnet:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet
spec:
  ports:
    - port: 8080
  selector:
    app: dotnet
