k8s/backend-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: ts-backend-flask:latest
          imagePullPolicy: Never # Assume built locally for dev
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  ports:
    - port: 5000
  selector:
    app: flask
