k8s/challenge-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - dotnet
              topologyKey: kubernetes.io/hostname
      containers:
        - name: dotnet
          image: ts-challenge-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet
spec:
  ports:
    - port: 8080
  selector:
    app: dotnet
